# Compilation-Principle-Lab

./: .gitignore  CMakeLists.txt  Constructor.cpp  Constructor.h  Grammer.h  LR_Generate.txt  Lab.sln  Lab.vcxproj  Lab.vcxproj.filters  Lex.cpp  Parser.cpp  Parser.h  QUATERNARY_LIST.txt  Reserve.cpp  Reserve.h  Symbol.h  input.txt  main.cpp  output.txt
header/: Lex.h  Methods.h  Translate.h
src/: Grammer.cpp  Lex.cpp  Reserve.cpp  Translate.cpp
